test/files/neg/t6476b.scala
class C {
  val sa = s"""\"""
  val sb = s"""\\"""
  val sc = s"""\ """
  val ra = raw"""\"""
  val rb = raw"""\\"""
  val rc = raw"""\ """
}
